--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -24,6 +25,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link type="text/css" href="/css/style.css" rel="stylesheet">
   <title>Canopy</title>
 </head>
 <body class="grey lighten-3">
@@ -52,6 +54,9 @@
     </li>
     <li class="logged-out" style="display: none;">
       <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+    </li>
+    <li class="logged-in" style="display: none;">
+        <a href="" class="grey-text" data-target="">Ongoing Events</a>
     </li>
   </span>
   </ul>
@@ -100,11 +105,51 @@
     </div>
   </div>
 
+  <!-- Add Event -->
+  <div class="center">
+    <a class="btn-floating btn-small add-btn modal-trigger" data-target="modal-add-event">
+        <i class="material-icons">add</i>
+    </a>
+  </div>
+
+  <!-- Add Event Modal Form -->
+  <div id="modal-add-event" class="modal">
+    <div class="modal-content">
+      <h4>Add Event</h4><br />
+      <form id="add-event-form">
+        <div class="input-field">
+          <input type="text" id="event-name" required />
+          <label for="event-name">Event Name</label>
+        </div>
+        <div class="input-field">
+          <input type="text" id="event-description" required />
+          <label for="event-description">Event Description</label>
+        </div>
+        <div class="input-field">
+            <input type="text" id="event-host" required />
+            <label for="event-host">Event Host</label>
+        </div>
+        <div class="input-field">
+            <input type="text" id="event-address" required />
+            <label for="event-address">Event Address</label>
+        </div>
+        <div class="input-field">
+            <input type="text" id="event-highlights" required />
+            <label for="event-highlights">Event Highlights</label>
+        </div>
+        <div class="input-field">
+            Event Schedule
+            <input type="datetime-local" id="event-schedule" required />
+        </div>
+        <!-- <input type="submit" class="btn yellow darken-2 z-depth-0" name="Add Event" value="Add Event"/> -->
+        <button class="btn yellow darken-2 z-depth-0">Add Event</button>
+      </form>
+    </div>
+  </div>
 
   <!-- GUIDE LIST -->
   <div class="container" style="margin-top: 40px;">
-    <ul class="collapsible z-depth-0 guides" style="border: none;">
-
+    <ul class="collapsible z-depth-0 events" style="border: none;">
     </ul>
   </div>
   
@@ -137,5 +182,6 @@
   <!-- Compiled and minified JavaScript -->
   <script src="scripts/auth.js"></script>
   <script src="scripts/index.js"></script>
+
 </body>
 </html>
