--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
   </script>
 
   <!-- Compiled and minified JavaScript -->
+  <script src="scripts/map.js"></script>
   <script src="scripts/auth.js"></script>
   <script src="scripts/index.js"></script>
-
 </body>
 </html>
