--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
     </div>
   </div>
 
-  <!-- GUIDE LIST -->
+  <!-- EVENT LIST -->
   <div class="container" style="margin-top: 40px;">
-    <ul class="collapsible z-depth-0 events" style="border: none;">
+    <ul class="collapsible z-depth-0 events" id="event-list" style="border: none;">
     </ul>
   </div>
   
