--- a/index.html
+++ b/index.html
@@ -26,18 +26,22 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" href="/css/style.css" rel="stylesheet">
+  
   <title>Canopy</title>
 </head>
 <body class="grey lighten-3">
 
   <!-- top nav -->
   <nav class="z-depth-0">
+    <div class="top-nav">
     <div class="nav-wrapper container">
       <a href="/">Canopy</a>
       <span class="right grey-text text-darken-1">
         <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
       </span>
+
     </div>
+  </div>
   </nav>
 
   <!-- side nav -->
@@ -47,13 +51,13 @@
       <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
     </li>
     <li class="logged-in" style="display: none;">
-      <a href="#" class="grey-text" id="logout">Logout</a>
+      <a href="#" class="grey-text sidenav-close" id="logout">Logout</a>
     </li>
     <li class="logged-out" style="display: none;">
-      <a href="#" class="grey-text modal-trigger" data-target="modal-login">Login</a>
+      <a href="#" class="grey-text modal-trigger sidenav-close" data-target="modal-login">Login</a>
     </li>
     <li class="logged-out" style="display: none;">
-      <a href="#" class="grey-text modal-trigger" data-target="modal-signup">Sign up</a>
+      <a href="#" class="grey-text modal-trigger sidenav-close" data-target="modal-signup">Sign up</a>
     </li>
     <li class="logged-in" style="display: none;">
         <a href="" class="grey-text" data-target="">Ongoing Events</a>
@@ -74,7 +78,7 @@
           <input type="password" id="signup-password" required />
           <label for="signup-password">Choose password</label>
         </div>
-        <button class="btn yellow darken-2 z-depth-0">Sign up</button>
+        <button class="btn yellow darken-2 z-depth-0" >Sign up</button>
       </form>
     </div>
   </div>
@@ -153,6 +157,78 @@
     </ul>
   </div>
   
+
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+        <br><br>
+        <h1 class="header center">Canopy</h1>
+        <div class="row center">
+        <h5 class="header col s12 light">A platform to see events under one roof</h5>
+        </div>
+        <div class="row center">
+        <a href="#" id="getstarted-btn" class="btn-large waves-effect waves-light black modal-trigger" data-target="modal-signup">Get Started</a>
+        </div>
+        <br><br>
+
+    </div>
+</div>
+
+    <!-- <div class="carousel">
+        <a class="carousel-item" href="#one!"><img src="./img/test.jpg"></a>
+        <a class="carousel-item" href="#two!"><img src="./img/test.jpg"></a>
+        <a class="carousel-item" href="#three!"><img src="./img/test.jpg"></a>
+        <a class="carousel-item" href="#four!"><img src="./img/test.jpg"></a>
+        <a class="carousel-item" href="#five!"><img src="./img/test.jpg"></a>
+    </div> -->
+
+  <div class="container" id="landing-content">
+  <div class="section">
+
+    <!--   Icon Section   -->
+    <div class="row">
+    <div class="col s12 m4">
+        <div class="icon-block">
+        <h2 class="center light-blue-text"><i class="material-icons">flash_on</i></h2>
+        <h5 class="center">Speeds up searching for event</h5>
+
+        <p class="light"> Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+    </div>
+
+    <div class="col s12 m4">
+        <div class="icon-block">
+        <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
+        <h5 class="center">Experience Chatrooms</h5>
+
+        <p class="light">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </div>
+
+    <div class="col s12 m4">
+        <div class="icon-block">
+        <h2 class="center light-blue-text"><i class="material-icons">settings</i></h2>
+        <h5 class="center">Easy to work with</h5>
+
+        <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
+        </div>
+    </div>
+    </div>
+
+  </div>
+<br><br>
+</div>
+
+
+
+
+<footer class="page-footer">
+    <div class="footer-copyright">
+        <div class="container">
+        Made by <i class="material-icons">favorite</i>
+        </div>
+    </div>
+</footer>
+
   <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.1.0/firebase-firestore.js"></script>
