--- a/landingpage.html
+++ b/landingpage.html
@@ -10,6 +10,15 @@
     <link type="text/css" href="/css/style.css" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+    <script> 
+        $(function(){
+          $("#includedContent").load("common.html"); 
+        });
+    </script>
     <title>Canopy</title>
 </head>
 
@@ -24,7 +33,7 @@
           </span>
         </div>
     </nav>
-   
+
     <div class="section no-pad-bot" id="index-banner">
         <div class="container">
             <br><br>
