--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   </div>
 
   <!-- Add Event -->
-  <div class="center">
-    <a class="btn-floating btn-small add-btn modal-trigger" data-target="modal-add-event">
+  <div class="center" style="margin-top: 20px; padding-bottom:0; ">
+    <a class="btn-floating btn-large add-btn modal-trigger" data-target="modal-add-event">
         <i class="material-icons">add</i>
     </a>
   </div>
