--- a/chat.html
+++ b/chat.html
@@ -30,7 +30,7 @@
 </head>
 <body class="grey lighten-3">
 
-    <h3 id="title">El Classico</h3>
+    <h3 id="title"></h3>
     <ul id="chatroom-messages">
 
     </ul>
