--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link type="text/css" href="/css/style.css" rel="stylesheet">
@@ -222,8 +223,9 @@
 
 
 <footer class="page-footer">
-    <div class="footer-copyright">
-        <div class="container">
+    <div class="footer-copyright" id="footer">
+        <div class="container" style="color: #fff;
+        font-family: 'Lobster', cursive; font-size: 1.5em;">
         Made by <i class="material-icons">favorite</i>
         </div>
     </div>
