--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="nav-wrapper container">
       <a href="/">Canopy</a>
       <span class="right grey-text text-darken-1">
-        <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
+        <i class="material-icons sidenav-trigger" data-target="side-menu" style="color: #fff">menu</i>
       </span>
 
     </div>
@@ -48,7 +48,7 @@
   <ul id="side-menu" class="sidenav side-menu">
     <li><a class="subheader">Canopy</a></li>
     <li class="logged-in" style="display: none;">
-      <a href="#" class="grey-text modal-trigger" data-target="modal-account">Account</a>
+      <a href="profile.html" class="grey-text " data-target="modal-account">Account</a>
     </li>
     <li class="logged-in" style="display: none;">
       <a href="#" class="grey-text sidenav-close" id="logout">Logout</a>
