--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
         <div class="nav-wrapper container">
           <a href="/">Canopy</a>
           <span class="right grey-text text-darken-1">
-            <i class="material-icons sidenav-trigger" data-target="side-menu">menu</i>
+            <i class="material-icons sidenav-trigger" data-target="side-menu" style="color: #fff">menu</i>
           </span>
     
         </div>
