--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link type="text/css" href="/css/style.css" rel="stylesheet">
-  <link rel="manifest" href="/manifest.json">
+  <link type="text/css" href="/public/css/style.css" rel="stylesheet">
+  <link rel="manifest" href="/public/manifest.json">
   
   <title>Canopy</title>
 </head>
